--- a/package.json
+++ b/package.json
@@ -1,40 +1,24 @@
 {
-  "name": "underground-app",
+  "name": "underground-chilling-room",
   "version": "1.0.0",
-  "description": "Underground Chilling Room App",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "lint": "next lint"
   },
-  "keywords": [
-    "underground",
-    "chilling",
-    "room",
-    "booking",
-    "app"
-  ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "mongoose": "^7.5.0",
     "next": "^13.4.19",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "xlsx": "^0.18.5",
-    "twilio": "^4.14.1",
-    "workbox-webpack-plugin": "^7.0.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.17",
-    "@testing-library/jest-dom": "^6.1.2",
-    "@testing-library/react": "^14.0.0",
-    "autoprefixer": "^10.4.15",
-    "jest": "^29.6.4",
-    "postcss": "^8.4.28",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "^13.4.19",
+    "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
   }
 }
